<resources>
    <string name="app_name">FooApp</string>
    <string name="channel_name">Notification name </string>
    <string name="channel_description">Notification description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Name</string>
    <string name="priceLabel">Price</string>
    <string name="descriptionLabel">Description</string>
    <string name="updateLabel">Update</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_waiter">WaiterActivity</string>
    <string name="admin">Admin</string>
    <!-- Order activity-->
    <string name="table">Table:</string>
    <string name="order_number">Order Num:</string>
    <string name="table_hint">Table number</string>
    <string name="total">Total:</string>
    <string name="no_food">No food selected</string>
    <string name="with_food"> food(s) added</string>
    <string name="action_settings">Settings</string>
    <!-- Menu -->
    <string name="today">Today</string>
    <string name="all">Foods</string>
    <string name="drink">Drinks</string>
    <string name="soup">Soups</string>
    <string name="desert">Desert</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Sidebar menu options-->
    <string name="nav_home">Home</string>
    <string name="nav_manager">Manager</string>
    <string name="nav_waiter">Waiter</string>
    <string name="nav_signin">Sign in</string>
    <string name="nav_logout">Logout</string>
    <string name="create_restaurant">Create Restaurant</string>
    <string name="my_restaurant">My Restaurant</string>
    <string name="saved_token">Token</string>
</resources>
